force-app/main/default/objects/hed_Course_Offering__x/hed_Course_Offering__x.object-meta.xml
<CustomObject>
    <description>Supplies data from Ed Plus org on the Contact page section "EdPlus Salesforce - Earned Admissions"</description>
    <externalDataSource>EdPlusCrossOrg</externalDataSource>
    <externalName>hed__Course_Offering__c</externalName>
    <label>Course Offering (EdPlus)</label>
    <pluralLabel>Course Offerings (EdPlus)</pluralLabel>
</CustomObject>