force-app/main/default/objects/hed_Course_Offering__x/fields/ASU_Credits__c.field-meta.xml
<CustomField>
    <fullName>ASU_Credits__c</fullName>
    <externalDeveloperName>ASU_Credits__c</externalDeveloperName>
    <label>ASU Credits</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>