force-app/main/default/objects/hed_Course_Offering__x/fields/ConnectionSentId__c.field-meta.xml
<CustomField>
    <fullName>ConnectionSentId__c</fullName>
    <externalDeveloperName>ConnectionSentId</externalDeveloperName>
    <label>Sent Connection ID</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>