force-app/main/default/objects/hed_Course_Offering__x/fields/Continuous_Course_Validation_Age__c.field-meta.xml
<CustomField>
    <fullName>Continuous_Course_Validation_Age__c</fullName>
    <externalDeveloperName>Continuous_Course_Validation_Age__c</externalDeveloperName>
    <label>Continuous Course Validation Age</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Number</type>
</CustomField>