force-app/main/default/objects/hed_Course_Offering__x/fields/Course_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_End_Date__c</fullName>
    <externalDeveloperName>Course_End_Date__c</externalDeveloperName>
    <label>Course End Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>