force-app/main/default/objects/hed_Course_Offering__x/fields/Course_Finalized_as_of__c.field-meta.xml
<CustomField>
    <fullName>Course_Finalized_as_of__c</fullName>
    <externalDeveloperName>Course_Finalized_as_of__c</externalDeveloperName>
    <label>Course Finalized as of</label>
    <type>Date</type>
</CustomField>