force-app/main/default/objects/hed_Course_Offering__x/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <externalDeveloperName>CreatedById</externalDeveloperName>
    <label>Created By ID</label>
    <length>18</length>
    <referenceTo>EdPlusUser__x</referenceTo>
    <relationshipLabel>Course Offerings</relationshipLabel>
    <relationshipName>Course_Offerings</relationshipName>
    <type>ExternalLookup</type>
</CustomField>