force-app/main/default/objects/hed_Course_Offering__x/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <externalDeveloperName>Description__c</externalDeveloperName>
    <label>Description</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>