force-app/main/default/objects/hed_Course_Offering__x/fields/EA_Course_URL__c.field-meta.xml
<CustomField>
    <fullName>EA_Course_URL__c</fullName>
    <externalDeveloperName>EA_Course_URL__c</externalDeveloperName>
    <label>EA Course URL</label>
    <type>Url</type>
</CustomField>