force-app/main/default/objects/hed_Course_Offering__x/fields/EdX_Course_Offering_ID__c.field-meta.xml
<CustomField>
    <fullName>EdX_Course_Offering_ID__c</fullName>
    <externalDeveloperName>EdX_Course_Offering_ID__c</externalDeveloperName>
    <label>EdX Course Offering ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>