force-app/main/default/objects/hed_Course_Offering__x/fields/GFA_Course_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>GFA_Course_Start_Date__c</fullName>
    <externalDeveloperName>GFA_Course_Start_Date__c</externalDeveloperName>
    <label>GFA Course Start Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>