force-app/main/default/objects/hed_Course_Offering__x/fields/GFA_Course_URL__c.field-meta.xml
<CustomField>
    <fullName>GFA_Course_URL__c</fullName>
    <externalDeveloperName>GFA_Course_URL__c</externalDeveloperName>
    <label>GFA Course URL</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>