force-app/main/default/objects/hed_Course_Offering__x/fields/GFA_Prerequisite_Course__c.field-meta.xml
<CustomField>
    <fullName>GFA_Prerequisite_Course__c</fullName>
    <externalDeveloperName>GFA_Prerequisite_Course__c</externalDeveloperName>
    <label>GFA Prerequisite Course</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>