force-app/main/default/objects/hed_Course_Offering__x/fields/hed_Capacity__c.field-meta.xml
<CustomField>
    <fullName>hed_Capacity__c</fullName>
    <externalDeveloperName>hed__Capacity__c</externalDeveloperName>
    <label>Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>