force-app/main/default/objects/hed_Course_Offering__x/fields/hed_Course__c.field-meta.xml
<CustomField>
    <fullName>hed_Course__c</fullName>
    <externalDeveloperName>hed__Course__c</externalDeveloperName>
    <label>Course</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>