force-app/main/default/objects/hed_Course_Offering__x/fields/hed_End_Date__c.field-meta.xml
<CustomField>
    <fullName>hed_End_Date__c</fullName>
    <externalDeveloperName>hed__End_Date__c</externalDeveloperName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>