force-app/main/default/objects/hed_Course_Offering__x/fields/hed_Faculty__c.field-meta.xml
<CustomField>
    <fullName>hed_Faculty__c</fullName>
    <externalDeveloperName>hed__Faculty__c</externalDeveloperName>
    <label>Primary Faculty</label>
    <length>18</length>
    <referenceTo>EdPlusContact__x</referenceTo>
    <relationshipLabel>Course Offerings</relationshipLabel>
    <relationshipName>Course_Offerings</relationshipName>
    <type>ExternalLookup</type>
</CustomField>