force-app/main/default/objects/hed_Course_Offering__x/fields/hed_Section_ID__c.field-meta.xml
<CustomField>
    <fullName>hed_Section_ID__c</fullName>
    <externalDeveloperName>hed__Section_ID__c</externalDeveloperName>
    <label>Section ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>