force-app/main/default/objects/hed_Course_Offering__x/fields/hed_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>hed_Start_Date__c</fullName>
    <externalDeveloperName>hed__Start_Date__c</externalDeveloperName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>