force-app/main/default/objects/hed_Course_Offering__x/fields/hed_Term__c.field-meta.xml
<CustomField>
    <fullName>hed_Term__c</fullName>
    <externalDeveloperName>hed__Term__c</externalDeveloperName>
    <label>Term</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>