force-app/main/default/objects/hed_Course_Offering__x/fields/Interest_Track__c.field-meta.xml
<CustomField>
    <fullName>Interest_Track__c</fullName>
    <externalDeveloperName>Interest_Track__c</externalDeveloperName>
    <label>Interest Track</label>
    <length>255</length>
    <type>Text</type>
</CustomField>