force-app/main/default/objects/hed_Course_Offering__x/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Is_Active__c</externalDeveloperName>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>