force-app/main/default/objects/hed_Course_Offering__x/fields/LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedById__c</fullName>
    <externalDeveloperName>LastModifiedById</externalDeveloperName>
    <label>Last Modified By ID</label>
    <length>18</length>
    <referenceTo>EdPlusUser__x</referenceTo>
    <relationshipLabel>Course Offerings</relationshipLabel>
    <relationshipName>Course_Offerings1</relationshipName>
    <type>ExternalLookup</type>
</CustomField>