force-app/main/default/objects/hed_Course_Offering__x/fields/LastViewedDate__c.field-meta.xml
<CustomField>
    <fullName>LastViewedDate__c</fullName>
    <externalDeveloperName>LastViewedDate</externalDeveloperName>
    <label>Last Viewed Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>