force-app/main/default/objects/hed_Course_Offering__x/fields/LMS_Course_Offering_ID__c.field-meta.xml
<CustomField>
    <fullName>LMS_Course_Offering_ID__c</fullName>
    <externalDeveloperName>LMS_Course_Offering_ID__c</externalDeveloperName>
    <label>LMS Course Offering ID</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>