force-app/main/default/objects/hed_Course_Offering__x/fields/Minimum_Passing_Grade__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Passing_Grade__c</fullName>
    <externalDeveloperName>Minimum_Passing_Grade__c</externalDeveloperName>
    <label>Minimum Passing Grade</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>