force-app/main/default/objects/hed_Course_Offering__x/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <externalDeveloperName>LMS_Course_Offering_ID__c</externalDeveloperName>
    <label>Course Offering ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>