force-app/main/default/objects/hed_Course_Offering__x/fields/OSP_Course_URL__c.field-meta.xml
<CustomField>
    <fullName>OSP_Course_URL__c</fullName>
    <externalDeveloperName>OSP_Course_URL__c</externalDeveloperName>
    <label>OSP Course URL</label>
    <type>Url</type>
</CustomField>