force-app/main/default/objects/hed_Course_Offering__x/fields/Progress_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Progress_Page_URL__c</fullName>
    <externalDeveloperName>Progress_Page_URL__c</externalDeveloperName>
    <label>Progress Page URL</label>
    <type>Url</type>
</CustomField>