force-app/main/default/objects/hed_Course_Offering__x/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <externalDeveloperName>Tags__c</externalDeveloperName>
    <label>Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>