force-app/main/default/objects/hed_Course_Offering__x/fields/Tooltip__c.field-meta.xml
<CustomField>
    <fullName>Tooltip__c</fullName>
    <externalDeveloperName>Tooltip__c</externalDeveloperName>
    <label>Tooltip</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>